@@ -1,3 +1,8 @@
+2009-07-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ld-ifunc/ifunc-5r-local-i386.d: New.
+	* ld-ifunc/ifunc-5r-local-x86-64.d: Likewise.
+
 2009-07-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* ld-arm/arm-target2.s: Add addend cases.
